--- a/paquets/step-ca-secrets/templates/secrets.yaml
+++ b/paquets/step-ca-secrets/templates/secrets.yaml
@@ -7,6 +7,8 @@ metadata:
     kubernetes.io/description: Mot de passe du certificat émetteur (intermediate_ca)
   name: {{ include "step-ca-secrets.fullname" . }}-ca-password
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "step-ca-secrets.labels" . | nindent 4 }}
 data:
   password: {{ required "intermediate_ca.password est requise" .Values.intermediate_ca.password | b64enc }}
 ---
@@ -18,6 +20,8 @@ metadata:
     kubernetes.io/description: Mot de passe du certificat du provisionneur JWK
   name: {{ include "step-ca-secrets.fullname" . }}-provisioner-password
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "step-ca-secrets.labels" . | nindent 4 }}
 data:
   password: {{ required "provisioner.password est requise" .Values.provisioner.password | b64enc }}
 ---
@@ -29,6 +33,8 @@ metadata:
     kubernetes.io/description: Clés chiffrées des autorités de certificat intermédiaire (émetteur) et racine
   name: {{ include "step-ca-secrets.fullname" . }}-secrets
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "step-ca-secrets.labels" . | nindent 4 }}
 stringData:
   intermediate_ca_key: |-{{ required "intermediate_ca.key est requise" .Values.intermediate_ca.key | nindent 4 }}
   root_ca_key: |-{{ required "root_ca.key est requise" .Values.root_ca.key | nindent 4 }}
