--- a/paquets/step-ca-secrets/values.yaml
+++ b/paquets/step-ca-secrets/values.yaml
@@ -2,10 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# -- Remplace le nom de la charte
-nameOverride: ""
-# -- Remplace le nom complet (fullname) d'application
-fullnameOverride: ""
+# -- Remplace le nom de la charte dans les objets déployés
+nameOverride: "step-certificates"
+# -- Remplace le nom de la release dans les objets déployés
+releaseOverride: "acme"
 
 # -- Autorité de certificat intermédiaire, émettrice de certificats
 intermediate_ca:
